--- a/views/home.html
+++ b/views/home.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   Hello
-  <form>
-    <input type = "text">
-    <input type = "submit">
+  <form method="POST" action="/video">
+    <input name="videoURL" type="text">
+    <input type="submit">
   </form>
 </body>
 </html>
