Changed body of html

--- a/views/home.html
+++ b/views/home.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Home Page</title>
+  <title>TubeSCII</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Hello
+  <h1>Hello and welcome to TubeSCII!</h1>
+  <p>Enter a youtube url into the box below:</p>
   <form method="POST" action="/video">
     <input name="videoURL" type="text">
     <input type="submit">
