--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>TubeSCII</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="StyleSheet.css"/>
+  <link rel="stylesheet" type="text/css" href="css/StyleSheet.css"/>
 </head>
 <body>
   <h1>Hello and welcome to TubeSCII!</h1>
