--- a/views/home.html
+++ b/views/home.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="css/StyleSheet.css"/>
 </head>
 <body>
-  <h1>Hello and welcome to TubeSCII!</h1>
-  <p>Enter a youtube url into the box below:</p>
+  <h1 class = "cute">Hello and welcome to TubeSCII!</h1>
+  <p id = "bananna">Enter a youtube url into the box below:</p>
   <form method="POST" action="/video">
     <input name="videoURL" type="text">
     <input type="submit">
