--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 class = "cute">Hello and welcome to TubeSCII!</h1>
-  <p id = "bananna">Enter a youtube url into the box below:</p>
+  <p>Enter a youtube url into the box below:</p>
   <form method="POST" action="/video">
     <input name="videoURL" type="text">
     <input type="submit">
