--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -1,8 +1,14 @@
 @charset "UTF-8";
 
-
 html {
   background-color: black;
   color: green;
   font-family: "Courier New", monospace;
+}
+
+input[type=submit] {
+  background-color: black;
+  color: green;
+  border-style: dashed;
+  border-color: green;
 }
