--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -12,3 +12,18 @@ input[type=submit] {
   border-style: dashed;
   border-color: green;
 }
+input[type=button] {
+  color: green;
+  border-style: dashed;
+  border-color: green;
+  background-color: black;
+}
+a {
+  text-decoration: none;
+  color: green;
+  border-style: dashed;
+  border-color: green;
+}
+#controls {
+  display: inline-block;
+}
