--- a/views/video.html
+++ b/views/video.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>TubeSCII</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/StyleSheet.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/StyleSheet.css" />
 </head>
+
 <body>
-  <h1 class = "cute">{{videoid}}</h1>
+  <a href= "../">Back to Homepage</a>
+  <h1>Your ASCII Video{{videoid}}</h1>
+  <video id = "videlement" hidden>
+
+  </video>
+
+  <video> <!--Actual ASCII video-->
+
+  </video>
+
+  <form method = "POST" action = "play">
+    <div #id = "controls">
+    <input type="button" name = "Play" value = "Play"></input>
+    <input type = "button" name = "Pause" value = "Pause"></input>
+  </div>
+</form>
+
+<script>
+var vidid = "{{videoid}}";
+</script>
+<script src="/js/index.js"></script>
+
 </body>
+
 </html>
