--- a/views/video.html
+++ b/views/video.html
@@ -10,27 +10,30 @@
 </head>
 
 <body>
-  <a href= "../">Back to Homepage</a>
-  <h1>Your ASCII Video{{videoid}}</h1>
-  <video id = "videlement" hidden>
+  <a href="../">Back to Homepage</a>
+  <h1>Your ASCII Video {{title}}</h1>
+  <video id="videlement">
 
   </video>
 
-  <video> <!--Actual ASCII video-->
+  <div>
+    <!--Actual ASCII video-->
 
-  </video>
-
-  <form method = "POST" action = "play">
-    <div #id = "controls">
-    <input type="button" name = "Play" value = "Play"></input>
-    <input type = "button" name = "Pause" value = "Pause"></input>
   </div>
-</form>
 
-<script>
-var vidid = "{{videoid}}";
-</script>
-<script src="/js/index.js"></script>
+  <form method="POST" action="play">
+    <div #id="controls">
+      <input type="button" name="Play" value="Play"></input>
+      <input type="button" name="Pause" value="Pause"></input>
+    </div>
+  </form>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script>
+    var vidid = "{{videoid}}";
+  </script>
+  <script src="/js/index.js"></script>
 
 </body>
 
