Span added with hidden attribute

--- a/views/video.html
+++ b/views/video.html
@@ -21,7 +21,7 @@
 
   </div>
 
-
+<span hidden>Your video is downloading</span>
   <div #id="controls">
     <input type="button" name="Play" value="Play"></input>
     <input type="button" name="Pause" value="Pause"></input>
