--- a/views/video.html
+++ b/views/video.html
@@ -11,7 +11,7 @@
 
 <body>
   <a href="../">Back to Homepage</a>
-  <h1>Your ASCII Video {{title}}</h1>
+  <h1>{{title}}</h1>
   <video id="videlement">
 
   </video>
@@ -27,7 +27,7 @@
     <input type="button" name="Pause" value="Pause"></input>
   </div>
 
-
+<p>{{{description}}}</p>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
