--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 class="cute">Hello and welcome to TubeSCII!</h1>
+  <h1 class="cute">Hello and welcome to <img src="/images/TubeSciiLogo.png" width = "122" height = "57"></img> </h1>
   <p>Enter a youtube url into the box below:</p>
   <form method="POST" action="/video">
     <input name="videoURL" type="text">
