--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -22,9 +22,11 @@ input[type=button] {
   font-family:"Courier New", monospace;
 }
 h1 {
-
+  padding-top: 0.5%;
 }
 #logo{
+  position: absolute;
+  top: 3%;
   display: inline-block;
 }
 a {
