--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 class="cute">Hello and welcome to <div id = "logo"><img src="/images/TubeSciiLogo.png" width = "122" height = "57" ></img></div> </h1>
+  <h1 class="cute">Hello and welcome to &nbsp<div id = "logo"><img src="/images/TubeSciiLogo.png" width = "122" height = "57" ></img></div> </h1>
   <p>Enter a youtube url into the box below:</p>
   <form method="POST" action="/video">
     <input name="videoURL" type="text">
