Sorta color implementation

--- a/views/video-color.html
+++ b/views/video-color.html
@@ -26,7 +26,8 @@
   </pre>
 
   <span id="downloadMessage" hidden style="font-size: 50px; font-weight: 400">Your video is downloading<br><br></span>
-
+  <span id="gettingColor" hidden style="font-size: 50px; font-weight: 400">Converting to color...<br><br></span>
+  
   <div #id="controls">
     <input type="button" name="Play" value="Play"></input>
     <input type="button" name="Pause" value="Pause"></input>
